@@ -67,6 +67,7 @@ import org.apache.solr.search.SolrReturnFields;
  */
 public class SolrQueryResponse {
   public static final String NAME = "response";
+  public static final String RESPONSE_HEADER_PARTIAL_RESULTS_KEY = "partialResults";
   private static final String RESPONSE_HEADER_KEY = "responseHeader";
   private static final String RESPONSE_KEY = "response";
 
